# ChituDiffusion

./: .dockerignore  .gitignore  .gitmodules  404.html  Dockerfile  MIGRATION.md  QUICKSTART.md  README.md  README_zh.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  run.sh  run_local_cfg.sh  run_local_cp.sh  run_local_single.sh  setup.py  sitemap.xml  srun_wan_demo.sh  system_config.yaml  torchrun_wan_demo.sh
.github/workflows/: docs.yml
ChituBench/: README.md  result.md  result_attention.md  result_flexcache.md  result_parallel_dit.md  result_parallel_vae.md
ChituBench/prompts/: flux1_attention.json  flux2_klein_attention.json  qwen_image_attention.json  wan2_1_t2v_1_3b_attention.json  z_image_flexcache.json  z_image_text_1p.json
ChituBench/scripts/: collect.py  collect_floor.py  evaluate_quality.py  flux_image_benchmark.py  make_contact_sheet.py  plot_e2e_ablation.py  plot_parallel_scaling.py  plot_qwen_parallel_ablation.py  prepare_hpsv3.py  qwen_image_benchmark.py  run_flux1_attention.sh  run_flux1_flexcache.sh  run_flux1_sequence_parallel.sh  run_flux2_klein_attention.sh  run_flux2_klein_sampler.sh  run_flux2_klein_sequence_parallel.sh  run_qwen_image_attention.sh  run_qwen_image_cp_backend.sh  run_qwen_image_floor.sh  run_qwen_image_parallel.sh  run_qwen_image_sampler.sh  run_wan2_1_t2v_1_3b_attention.sh  run_wan2_1_t2v_1_3b_flexcache.sh  run_wan2_1_t2v_1_3b_parallel_dit.sh  wan_video_benchmark.py  z_image_benchmark.py
ChituBench/worklogs/: 2026-06-17-wan2_1_t2v_1_3b_attention.md
advanced/custom-models/: index.html
advanced/evaluation/: index.html
advanced/flexcache/: index.html
advanced/low-memory/: index.html
api/backend/: index.html
api/core/: index.html
api/generator/: index.html
api/scheduler/: index.html
api/task/: index.html
architecture/attention-backends/: index.html
architecture/design-philosophy/: index.html
architecture/overview/: index.html
architecture/parallelism/: index.html
backup/: ditango-easy.py  ditango_attn_origin.py
backup/ditango_v3/: planner.py  ppm_visualizer.py  runtime.py
changelog/: index.html
chitu_core/: device_type.py  global_vars.py  logging_utils.py  setup.py
chitu_core/config/: serve_config.yaml
chitu_core/distributed/: comm_group.py  parallel_state.py  partition.py
chitu_core/models/: __init__.py  model.py  registry.py
chitu_core/schemas/: serve_config.py  serve_config_rules.py
chitu_diffusion/: __init__.py  backend.py  chitu_diffusion_main.py  cli.py  generator.py  model_default.py  scheduler.py  task.py
chitu_diffusion/bench/: __init__.py  timer.py
chitu_diffusion/core/: config_loader.py  global_vars.py  logging_utils.py  pyproject.toml  setup.py  tokenizer.py  utils.py
chitu_diffusion/core/config/: serve_config.yaml
chitu_diffusion/core/config/benchmark/: default.yaml
chitu_diffusion/core/config/models/: FLUX.1-dev.yaml  FLUX.2-klein-4B.yaml  Flux1-dev.yaml  Flux2-klein-4B.yaml  Qwen-Image.yaml  Wan2.1-T2V-1.3B.yaml  Wan2.1-T2V-14B.yaml  Wan2.2-T2V-A14B.yaml  Z-Image.yaml
chitu_diffusion/core/distributed/: __init__.py  comm_group.py  parallel_state.py
chitu_diffusion/core/models/: __init__.py  backbone.py  model.py  model_flux1.py  model_flux2.py  model_wan.py
chitu_diffusion/core/models/diffusion/: model_flux2.py  model_wan.py
chitu_diffusion/core/schemas/: __init__.py  serve_config.py  utils.py
chitu_diffusion/ditango/: __init__.py  explain.md  planner.py  ppm_visualizer.py  runtime.py  state.py
chitu_diffusion/eval/: eval_manager.py
chitu_diffusion/evaluation/: eval_manager.py
chitu_diffusion/flex_cache/: README.md  README.zh.md  flexcache_manager.py
chitu_diffusion/flexcache/: README.md  README.zh.md  flexcache_manager.py  freecache_core.py  model_adapters.py  params.py
chitu_diffusion/models/: __init__.py  model_flux1.py  model_flux2.py  model_wan.py  parallel.py  registry.py
chitu_diffusion/observability/: magnitude.py  timer.py
chitu_diffusion/parallel/: __init__.py  dit.py  planner.py  state.py  vae.py
chitu_diffusion/runtime/: __init__.py  backend.py  generator.py  image_output.py  main.py  output_layout.py  parallel_utils.py  parallel_vae.py  scheduler.py  task.py
chitu_diffusion/utils/: kv_capture.py  output_naming.py  shared_utils.py
contributing/code-style/: index.html
contributing/developer-guide/: index.html
contributing/testing/: index.html
docs/: changelog.md  changelog.zh.md  entry-reorganization.md  faq.md  faq.zh.md  index.md  index.zh.md  install_and_launch.md  requirements.txt  whySmart.md  whySmart_zh.md
docs/advanced/: custom-models.md  evaluation.md  flexcache.md  flexcache.zh.md  low-memory.md
docs/api/: backend.md  core.md  generator.md  scheduler.md  task.md
docs/architecture/: attention-backends.md  design-philosophy.md  overview.md  parallelism.md
docs/assets/: chitudiffusion-brand-prompts.json  chitudiffusion-brand-qwen.yaml  chitudiffusion-title-prompts.json  (+1 more)
faq/: index.html
script/: init_vbench_models.py  install_codex_skills.py  plot_ditango_trace.py  srun_direct.sh  srun_multi_node.sh  srun_wrapper.sh  torchrun_direct.sh
scripts/: README.md  launch.sh
search/: search_index.json
service_framework/: README.md  persistent_service.py  server.py
site/: 404.html  index.html  objects.inv  sitemap.xml
test/: README.md  flexcache_summary.py  run_context.py  run_flexcache_smoke.sh  run_flux_attention_backends.sh  run_flux_cp_backends.sh  run_wan_attention_backends.sh  run_wan_cp_backends.sh  test_diffusion_runtime_adapter.py  test_ditango.py  test_ditango_planner_boundaries.py  test_flexcache.py  test_flexcache_memory.py  test_flexcache_params.py  test_flux.py  test_flux1_flexcache.py  test_freecache_core.py  test_generate.py  test_qwen_image.py  test_reference_quality_frames.py  test_timer.py  test_wan.py  test_z_image.py
whySmart/: index.html
whySmart_zh/: index.html
zh/: index.html
(+412 files in other folders)
